--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -17,7 +17,6 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_below="@+id/title_bar"
         android:background="@drawable/bg_layerlist"
         android:gravity="center_vertical"
         android:orientation="vertical"
@@ -50,7 +49,7 @@
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:text="http://192.168.1.101"
-             android:textSize="12sp"
+             android:textSize="15sp"
              android:textColor="@color/server_ip"/>
 	</LinearLayout>
 	
@@ -60,6 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:drawableLeft="@drawable/cloud_sync"
+		android:drawablePadding="5dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:layout_gravity="center"
@@ -73,16 +74,20 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:background="@drawable/bg_layerlist"
         android:orientation="horizontal"
         android:layout_gravity="center">
         
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"
-            android:text="合同"
+            android:text="合同:"
             android:textColor="@android:color/black"
-            android:textSize="22sp"/>
+            android:textSize="18sp"/>
+        
     	<Spinner android:id="@+id/setting_spinner_contract"
+    	    android:layout_gravity="center_vertical"
         	android:layout_width="0dp" 
         	android:layout_weight="1"
         	android:layout_height="wrap_content"
@@ -97,15 +102,19 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal"
+        android:background="@drawable/bg_layerlist"
         android:layout_gravity="center">
         
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"
-            android:text="钻孔"
+            android:text="钻孔:"
             android:textColor="@android:color/black"
-            android:textSize="22sp"/>
+            android:textSize="18sp"/>
+        
     	<Spinner android:id="@+id/setting_spinner_hole"
+    	    android:layout_gravity="center_vertical"
         	android:layout_width="0dp" 
         	android:layout_weight="1"
         	android:layout_height="wrap_content"
