--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -64,6 +64,7 @@
 	<color name="classify_search_background_color">#f0f0f0</color>
 	<color name="about_version_color">#8c8c8c</color>
 	<color name="dialog_title_color">#a2b8d3</color>
+	<color name="listview_item_bottom_right">#3988e5</color>
 	
 	<!-- dialog -->
 	<color name="dialog_value">#FF5c5c5c</color>
